_build/include/qmckl.h

/* /home/runner/work/qmckl/qmckl/_build/src/qmckl_context_type.h */
/* Context handling */

/*   The context is the central data structure in QMCkl, serving as a handle */
/*   for the complete state of the library. All QMCkl functions require a context */
/*   as their first argument, and all computed data is stored within the context. */
  
/*   The context variable is a handle for the state of the library, and is stored  */
/*   in a data structure which can't be seen outside of the library. This  */
/*   encapsulation provides a clean API boundary and allows internal implementation  */
/*   details to change without affecting user code. */
  
/*   To simplify compatibility with other languages (particularly Fortran), the */
/*   pointer to the internal data structure is converted into a 64-bit */
/*   signed integer, defined in the ~qmckl_context~ type. This approach avoids */
/*   issues with language interoperability related to opaque pointer types. */
/*   A value of ~QMCKL_NULL_CONTEXT~ for the context is equivalent to a */
/*   ~NULL~ pointer and represents an invalid or uninitialized context. */

/*   #+NAME: qmckl_context */

typedef int64_t qmckl_context ;
/* /home/runner/work/qmckl/qmckl/_build/src/qmckl_error_type.h */
/* Exit codes */

/*    All the functions in the QMCkl library return with an exit code, defined as */
/*    #+NAME: type-exit-code */

typedef int32_t qmckl_exit_code;
/* /home/runner/work/qmckl/qmckl/_build/src/qmckl_numprec_type.h */


/* #+RESULTS: */
/* :results: */

#define  QMCKL_DEFAULT_PRECISION        53
#define  QMCKL_DEFAULT_RANGE            11
/* /home/runner/work/qmckl/qmckl/_build/src/qmckl_numprec_func.h */
/* Precision */
/*   ~qmckl_context_set_numprec_precision~ modifies the parameter for the */
/*   numerical precision in the context. */

/*   # Header */

qmckl_exit_code qmckl_set_numprec_precision(const qmckl_context context, const int precision);
/* ~qmckl_get_numprec_precision~ returns the value of the numerical precision in the context. */


int32_t qmckl_get_numprec_precision(const qmckl_context context);
/* Range */

/*    ~qmckl_set_numprec_range~ modifies the parameter for the numerical */
/*    range in a given context. */

/*    # Header */

qmckl_exit_code qmckl_set_numprec_range(const qmckl_context context, const int range);
/* ~qmckl_get_numprec_range~ returns the value of the numerical range in the context. */


int32_t qmckl_get_numprec_range(const qmckl_context context);
/* Epsilon */

/*    ~qmckl_get_numprec_epsilon~ returns $\epsilon = 2^{1-n}$ where ~n~ is the precision. */
/*    We need to remove the sign bit from the precision. */


double qmckl_get_numprec_epsilon(const qmckl_context context);
int32_t qmckl_test_precision_64(double a, double b);
int32_t qmckl_test_precision_32(float a, float b);
/* /home/runner/work/qmckl/qmckl/_build/src/qmckl_point_func.h */
/* Number of points */


qmckl_exit_code qmckl_get_point_num (const qmckl_context context, int64_t* const num);
/* Point coordinates */


qmckl_exit_code qmckl_get_point(const qmckl_context context,
                                const char transp,
                                double* const coord,
                                const int64_t size_max);
/* Initialization functions */

/*    When the data is set in the context, if the arrays are large */
/*    enough, we overwrite the data contained in them. */

/*    To set the data relative to the points in the context, the */
/*    following function need to be called. Here, ~num~ is the number of */
/*    points to set. */


qmckl_exit_code qmckl_set_point (qmckl_context context,
                                 const char transp,
                                 const int64_t num,
                                 const double* coord,
                                 const int64_t size_max);
/* /home/runner/work/qmckl/qmckl/_build/src/qmckl_nucleus_func.h */
/* Access functions */


qmckl_exit_code
qmckl_get_nucleus_num(const qmckl_context context,
                      int64_t* const num);
qmckl_exit_code
qmckl_get_nucleus_charge(const qmckl_context context,
                         double* const charge,
                         const int64_t size_max);
qmckl_exit_code
qmckl_get_nucleus_coord(const qmckl_context context,
                        const char transp,
                        double* const coord,
                        const int64_t size_max);
/* To set the data relative to the nuclei in the context, the */
/* following functions need to be called. */


qmckl_exit_code
qmckl_set_nucleus_num(qmckl_context context,
                      const int64_t num);
qmckl_exit_code
qmckl_set_nucleus_charge(qmckl_context context,
                         const double* charge,
                         const int64_t size_max);
qmckl_exit_code
qmckl_set_nucleus_coord(qmckl_context context,
                        const char transp,
                        const double* coord,
                        const int64_t size_max);
/* Get */


qmckl_exit_code
qmckl_get_nucleus_nn_distance(qmckl_context context,
                              double* distance,
                              const int64_t size_max);
/* Get */


qmckl_exit_code qmckl_get_nucleus_repulsion(qmckl_context context, double* const energy);
qmckl_exit_code  qmckl_set_mo_basis_coefficient      (qmckl_context context, const double  * coefficient, const int64_t size_max);
qmckl_exit_code  qmckl_set_mo_basis_r_cusp           (qmckl_context context, const double  * r_cusp, const int64_t size_max);
/* Access functions */


qmckl_exit_code
qmckl_get_mo_basis_mo_num (const qmckl_context context,
                           int64_t* mo_num);
qmckl_exit_code
qmckl_get_mo_basis_coefficient (const qmckl_context context,
                                double* const coefficient,
                                const int64_t size_max);
/* Update */

/*    It may be desirable to remove certain molecular orbitals (MOs) that */
/*    do not significantly contribute to the wave function.  In */
/*    particular, in a single determinant calculation, the virtual MOs */
/*    can be removed as they do not participate in the ground state */
/*    configuration. */

/*    To select a subset of MOs that will be kept, an array of integers of */
/*    size ~mo_num~ can be created. If the integer corresponding to an MO is */
/*    zero, that MO is dropped and will not be included in the */
/*    calculation. If the integer is non-zero, the MO will be kept. */



qmckl_exit_code
qmckl_mo_basis_select_mo (const qmckl_context context,
                          const int32_t* keep,
                          const int64_t size_max);
/* Get */


qmckl_exit_code
qmckl_get_mo_basis_mo_value(qmckl_context context,
                            double* const mo_value,
                            const int64_t size_max);
/* Uses the given array to compute the values. */


qmckl_exit_code
qmckl_get_mo_basis_mo_value_inplace (qmckl_context context,
                                     double* const mo_value,
                                     const int64_t size_max);
/* Get */


qmckl_exit_code
qmckl_get_mo_basis_mo_vgl(qmckl_context context,
                          double* const mo_vgl,
                          const int64_t size_max);
/* Uses the given array to compute the VGL. */


qmckl_exit_code
qmckl_get_mo_basis_mo_vgl_inplace (qmckl_context context,
                                   double* const mo_vgl,
                                   const int64_t size_max);
/* Rescaling of MO coefficients */

/*    When evaluating Slater determinants, the value of the determinants */
/*    may get out of the range of double precision. A simple fix is to */
/*    rescale the MO coefficients to put back the determinants in the */
/*    correct range. */


qmckl_exit_code
qmckl_mo_basis_rescale(qmckl_context context,
                          const double scaling_factor);
/* /home/runner/work/qmckl/qmckl/_build/src/qmckl_sherman_morrison_woodbury_func.h */
qmckl_exit_code qmckl_sm_naive (
      const qmckl_context context,
      const uint64_t LDS,
      const uint64_t Dim,
      const uint64_t N_updates,
      const double* Updates,
      const uint64_t* Updates_index,
      const double breakdown,
      double* Slater_inv,
      double* determinant );
/* Code */


qmckl_exit_code
qmckl_get_jastrow_champ_single_accept(qmckl_context context);